[gd_scene load_steps=6 format=2]

[ext_resource path="res://Button_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Data/dogica.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/Pause.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = -6
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.184314 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -433.0
margin_top = -310.0
margin_right = 433.0
margin_bottom = 310.0

[node name="Checklist" type="Control" parent="ColorRect/ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 36.0
margin_top = -276.0
margin_right = 466.0
margin_bottom = 276.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ColorRect/Checklist"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="Label" parent="ColorRect/ColorRect/Checklist/VBoxContainer"]
margin_right = 430.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Check List"
align = 1
valign = 1

[node name="Header2" type="Label" parent="ColorRect/ColorRect/Checklist/VBoxContainer"]
margin_top = 44.0
margin_right = 430.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="List1" type="Label" parent="ColorRect/ColorRect/Checklist/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 88.0
margin_right = 430.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Kill bear"
align = 1
valign = 1

[node name="List2" type="Label" parent="ColorRect/ColorRect/Checklist/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 132.0
margin_right = 430.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Chase away 6 bears"
align = 1
valign = 1

[node name="List3" type="Label" parent="ColorRect/ColorRect/Checklist/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 176.0
margin_right = 430.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Return min 2 villager"
align = 1
valign = 1

[node name="List4" type="Label" parent="ColorRect/ColorRect/Checklist/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 220.0
margin_right = 430.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Warden self return"
align = 1
valign = 1

[node name="List5" type="Label" parent="ColorRect/ColorRect/Checklist/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 264.0
margin_right = 430.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Gentleman not leave"
align = 1
valign = 1

[node name="Return" type="Button" parent="ColorRect/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -303.0
margin_top = 12.0
margin_right = -102.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 101, 24 )
custom_fonts/font = ExtResource( 1 )
text = "Return"

[node name="Exit" type="Button" parent="ColorRect/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -303.0
margin_top = 95.0
margin_right = -102.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( 101, 24 )
custom_fonts/font = ExtResource( 1 )
text = "Exit"

[node name="Label" type="Label" parent="ColorRect/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -327.0
margin_top = -172.0
margin_right = -81.0
margin_bottom = -48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1
valign = 1

[connection signal="pressed" from="ColorRect/ColorRect/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="ColorRect/ColorRect/Exit" to="." method="_on_Exit_pressed"]
